fix 2 more tests