@@ -30,7 +30,10 @@
  *          be reordered during SuperWord::schedule.
  * @modules java.base/jdk.internal.misc
  * @library /test/lib /
- * @run driver compiler.loopopts.superword.TestScheduleReordersScalarMemops
+ * @run driver compiler.loopopts.superword.TestScheduleReordersScalarMemops nCOH_nAV
+ * @run driver compiler.loopopts.superword.TestScheduleReordersScalarMemops nCOH_yAV
+ * @run driver compiler.loopopts.superword.TestScheduleReordersScalarMemops yCOH_nAV
+ * @run driver compiler.loopopts.superword.TestScheduleReordersScalarMemops yCOH_yAV
  */
 
 package compiler.loopopts.superword;
@@ -50,12 +53,21 @@ public class TestScheduleReordersScalarMemops {
     float[] goldF1 = new float[RANGE];
 
     public static void main(String args[]) {
-        TestFramework.runWithFlags("--add-modules", "java.base", "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
-                                   "-XX:CompileCommand=compileonly,compiler.loopopts.superword.TestScheduleReordersScalarMemops::test*",
-                                   "-XX:CompileCommand=compileonly,compiler.loopopts.superword.TestScheduleReordersScalarMemops::verify",
-                                   "-XX:CompileCommand=compileonly,compiler.loopopts.superword.TestScheduleReordersScalarMemops::init",
-                                   "-XX:-TieredCompilation", "-Xbatch",
-                                   "-XX:+IgnoreUnrecognizedVMOptions", "-XX:LoopUnrollLimit=1000");
+        TestFramework framework = new TestFramework(TestScheduleReordersScalarMemops.class);
+        framework.addFlags("--add-modules", "java.base", "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
+                           "-XX:CompileCommand=compileonly,compiler.loopopts.superword.TestScheduleReordersScalarMemops::test*",
+                           "-XX:CompileCommand=compileonly,compiler.loopopts.superword.TestScheduleReordersScalarMemops::verify",
+                           "-XX:CompileCommand=compileonly,compiler.loopopts.superword.TestScheduleReordersScalarMemops::init",
+                           "-XX:-TieredCompilation", "-Xbatch",
+                           "-XX:+IgnoreUnrecognizedVMOptions", "-XX:LoopUnrollLimit=1000");
+        switch (args[0]) {
+            case "nCOH_nAV" -> { framework.addFlags("-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:-AlignVector"); }
+            case "nCOH_yAV" -> { framework.addFlags("-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:+AlignVector"); }
+            case "yCOH_nAV" -> { framework.addFlags("-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders", "-XX:-AlignVector"); }
+            case "yCOH_yAV" -> { framework.addFlags("-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders", "-XX:+AlignVector"); }
+            default -> { throw new RuntimeException("Test argument not recognized: " + args[0]); }
+        };
+        framework.start();
     }
 
     TestScheduleReordersScalarMemops() {
@@ -79,6 +91,7 @@ public class TestScheduleReordersScalarMemops {
 
     @Test
     @IR(counts = {IRNode.MUL_VI, "> 0"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
         applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
     static void test0(int[] dataIa, int[] dataIb, float[] dataFa, float[] dataFb) {
         for (int i = 0; i < RANGE; i+=2) {
@@ -103,6 +116,10 @@ public class TestScheduleReordersScalarMemops {
             dataIb[i + 0] = (int)dataFb[i + 0] * 11;  // X *11
             dataIb[i + 1] = (int)dataFb[i + 1] * 11;  // Y *11
             dataFa[i + 1] = dataIa[i + 1] + 1.2f;     // B +1.2
+            // With AlignVector, we need 8-byte alignment of vector loads/stores.
+            // UseCompactObjectHeaders=false                 UseCompactObjectHeaders=true
+            // adr = base + 16 + 8*i   ->  always            adr = base + 12 + 8*i   ->  never
+            // -> vectorize                                  -> no vectorization
         }
     }
 
@@ -119,6 +136,7 @@ public class TestScheduleReordersScalarMemops {
 
     @Test
     @IR(counts = {IRNode.MUL_VI, "> 0"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
         applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
     static void test1(int[] dataIa, int[] dataIb, float[] dataFa, float[] dataFb) {
         for (int i = 0; i < RANGE; i+=2) {
@@ -128,6 +146,10 @@ public class TestScheduleReordersScalarMemops {
             dataIb[i+0] = 11 * unsafe.getInt(dataFb, unsafe.ARRAY_INT_BASE_OFFSET + 4L * i + 0);  // X
             dataIb[i+1] = 11 * unsafe.getInt(dataFb, unsafe.ARRAY_INT_BASE_OFFSET + 4L * i + 4);  // Y
             unsafe.putInt(dataFa, unsafe.ARRAY_FLOAT_BASE_OFFSET + 4L * i + 4, dataIa[i+1] * 11); // B *11
+            // With AlignVector, we need 8-byte alignment of vector loads/stores.
+            // UseCompactObjectHeaders=false                 UseCompactObjectHeaders=true
+            // adr = base + 16 + 8*i   ->  always            adr = base + 12 + 8*i   ->  never
+            // -> vectorize                                  -> no vectorization
         }
     }
 
